<resources>
    <string name="app_name">YO TE LO LLEVO</string>
    <string name="restrinccion">TODO</string>
    <string name="username">Correo electrónico o teléfono:</string>
    <string name="password">Contraseña:</string>
    <string name="login">Login</string>
    <string name="cuenta">¿No tienes cuenta?,</string>
    <string name="crear"> <![CDATA[<u>crea una aquí</u>]]> </string>
    <string name="registrate">Registrate</string>
    <string name="nombres">Nombre(s):</string>
    <string name="apellidos">Apellidos:</string>
    <string name="fechana">Fecha de nacimiento:</string>
    <string name="telefono">Número de teléfono:</string>
    <string name="usuario">Correo electrónico:</string>
    <string name="confirmapa">Confirmar contraseña:</string>
    <string name="toolbat_createaccount">Crear cuenta</string>
    <string name="crear_cuenta">Guardar</string>
    <string name="toolbar_inicio">Yo te lo Llevo</string>
    <string name="toolbar_editar">Editar cuenta</string>
    <string name="historial">Historial</string>
    <string name="cerrarsesion">Cerrar sesión</string>
    <string name="toolbar_orden">Orden de servicio</string>
    <string name="toolbar_servicio">Servicios</string>
    <string name="toolabar_historial">Historial</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="servicios">Servicios</string>
    <string name="nombre">Nombre</string>
    <string name="nombre_usuario">Usuario</string>
    <string name="ordenes">Ordenes realizadas:</string>
    <string name="sindato">-</string>
    <string name="editar">Editar</string>
    <string name="contactanos">Contáctanos</string>
    <string name="asunto">Asunto:</string>
    <string name="mensaje">Mensaje:</string>
    <string name="enviar">Enviar</string>
    <string name="datosperfil">Datos usuario</string>
    <string name="completo">Nombre completo:</string>
    <string name="todo">TODO</string>
    <string name="datos_cuenta">Datos cuenta</string>
    <string name="eliminar_cuenta">Eliminar cuenta</string>
    <string name="resumen">Resumen</string>
    <string name="detalles">Detalles</string>
    <string name="extra">Extra</string>
    <string name="pedir">Siguiente</string>
    <string name="wifi">No hay internet</string>
    <string name="datosOrd">Datos de orden</string>
    <string name="tipoSer">Tipo de servicio:</string>
    <string name="desc">Detalla tu pedido:</string>
    <string name="comparte">Comparte tu destino desde</string>
    <string name="googleMaps">google maps</string>
    <string name="indi">Origen y destino:</string>
    <string name="numero_orden">Orden de servicio:</string>
    <string name="fecha_orden">Fecha:</string>
    <string name="desc_orden">Descripción:</string>
    <string name="llamar">Llamar</string>
    <string name="texto_viajeUrgente">Si necesitas un servicio urgente, llámanos.</string>
    <string name="anombrede">A nombre de:</string>
    <string name="recuperar"><![CDATA[<u>¿olvidaste tu contraseña?</u>]]></string>
    <string name="recuperatucuenta">Recupera tu cuenta</string>
    <string name="podemosayudarte"><![CDATA[<body style="text-align:justify;">Podemos ayudarte a restablecer tu contraseña, escribe tu correo electrónico y te llegará un código nuevo como contraseña.</body>]]></string>
    <string name="telefonopara">Teléfono para contacto:</string>
    <string name="correo">Correo electrónico:</string>
</resources>
