<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".usuario_general.CrearCuentaActivity"
    android:background="@color/subfondo"
    >

    <include layout="@layout/actionbar_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            >

            <android.support.v7.widget.CardView
                android:layout_width="@dimen/width_cardviewfront"
                android:layout_height="match_parent"
                app:cardBackgroundColor="@color/background_cardview"
                android:layout_marginTop="@dimen/textSize_titulo"
                android:layout_marginBottom="@dimen/textSize_titulo"
                cardview:cardCornerRadius="@dimen/cornerRadius_cardView"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/activity_horizontal_margin"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/registrate"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/textSize_titulo"
                        android:textStyle="bold"
                        android:layout_marginTop="@dimen/marginTopButton"
                        />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/EditTextBlack"
                        android:layout_marginTop="@dimen/marginTopButton"
                        >

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/idnombres"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/nombres"
                            android:singleLine="true"
                            app:errorEnabled="true"
                            android:inputType="text" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/EditTextBlack"
                        >

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/idapellidos"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/apellidos"
                            android:singleLine="true"
                            app:errorEnabled="true"
                            android:inputType="text" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/EditTextBlack"
                        >

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/idfecha"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/fechana"
                            android:singleLine="true"
                            app:errorEnabled="true"
                            />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/EditTextBlack"
                        >

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/idtelefono"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/telefono"
                            android:singleLine="true"
                            app:errorEnabled="true"
                            android:inputType="number" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/EditTextBlack"
                        >

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/idusuario"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/usuario"
                            android:singleLine="true"
                            app:errorEnabled="true"
                            android:inputType="textEmailAddress" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/EditTextBlack"
                        >

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/idpassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:singleLine="true"
                            app:errorEnabled="true"
                            android:inputType="textPassword" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/EditTextBlack"
                        >

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/idconfirmarpa"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/confirmapa"
                            android:singleLine="true"
                            app:errorEnabled="true"
                            android:inputType="textPassword" />

                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/butt_cuenta"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/crear_cuenta"
                        android:theme="@style/RaisedButtonDark"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/marginTopButton"
                        android:textAllCaps="false"
                        />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>