<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimary"
    tools:context=".usuario_general.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/logo_negro"
                android:contentDescription="@string/restrinccion" />

        </RelativeLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:fillViewport="true"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_horizontal_login"
                >

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextWhite"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/login_usuario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username"
                        android:singleLine="true"
                        android:inputType="text"
                        app:errorEnabled="true"
                        />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextWhite"
                    android:layout_marginTop="@dimen/editText_margin_createaccount"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/login_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:singleLine="true"
                        android:inputType="textPassword"
                        app:errorEnabled="true"
                        />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/butt_sesion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:theme="@style/RaisedButtonDark"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/marginTopButton"
                    android:textAllCaps="false"
                    />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    >

                    <TextView
                        android:id="@+id/textView_cuenta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cuenta"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="@dimen/textSize_lite"
                        />

                    <TextView
                        android:id="@+id/textView_crear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/textView_cuenta"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_toEndOf="@id/textView_cuenta"
                        android:layout_toRightOf="@id/textView_cuenta"
                        android:text="@string/crear"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/textSize_lite"
                        android:textStyle="bold"
                        android:onClick="onClick"
                        />

                </RelativeLayout>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>